# ml-ops-course

./: .gitignore  .pre-commit-config.yaml  README.md  data.dvc  dgl-2.4.0+cu121-cp312-cp312-manylinux1_x86_64.whl.dvc  indices.dvc  metrics.dvc  models.dvc  pyproject.toml
.dvc/: config
data/wikics/raw/: data.json.dvc
indices/: test.parquet.dvc  train.parquet.dvc  val.parquet.dvc
models/: final_model.pth.dvc
wikics-segment-prediction/: utils.py  wiki_cs_dataset.py
wikics_segment_prediction/: baseline.py  commands.py  download_data.py  infer.py  model.py  pl_wrapper.py  train.py  utils.py  wiki_cs_dataset.py
wikics_segment_prediction/configs/: config.yaml
wikics_segment_prediction/configs/baseline/: baseline.yaml
wikics_segment_prediction/configs/deepwalk/: deepwalk.yaml
wikics_segment_prediction/configs/mlflow/: mlflow.yaml
wikics_segment_prediction/configs/model/: model.yaml
wikics_segment_prediction/configs/settings/: settings.yaml
wikics_segment_prediction/configs/train/: train.yaml
wikics_segment_prediction/modules/: dgl_attention_module.py  feed_forward_module.py  graph_transformer.py  serving_model.py  transformer_module.py
wikics_segment_prediction/scripts/: convert_to_tensorrt.py
